Mahout Change Log

Release 0.9 - unreleased

  MAHOUT-1380: Streaming KMeans when executed in Sequential Mode (smarthi)

  MAHOUT-1379: ClusterQualitySummarizer fails with the new T-Digest for clusters with 1 data point (smarthi)

  MAHOUT-1370: Vectordump doesn't write to output file in MapReduce Mode (smarthi)

  MAHOUT-1368: Convert OnlineSummarizer to use the new TDigest (tdunning)

  MAHOUT-1367: WikipediaXmlSplitter --> Exception in thread "main" java.lang.NullPointerException (smarthi)

  MAHOUT-1362: Remove examples/bin/build-reuters.sh (smarthi)

  MAHOUT-1361: Online algorithm for computing accurate Quantiles using 1-D clustering (tdunning)

  MAHOUT-1358: StreamingKMeansThread throws IllegalArgumentException when REDUCE_STREAMING_KMEANS is set to true (smarthi)

  MAHOUT-1355: InteractionValueEncoder produces wrong traceDictionary entries (Johannes Schulte via smarthi)

  MAHOUT-1351: Adding DenseVector support to AbstractCluster (David DeBarr via smarthi)

  MAHOUT-1347: Add Streaming K-Means clustering algorithm to examples/bin/cluster-reuters.sh (smarthi)

  MAHOUT-1345: Enable randomised testing for all Mahout modules (Dawid Weiss, Isabel, sslavic, Frank Scholten, smarthi)

  MAHOUT-1343: JSON output format support in cluster dumper (Telvis Calhoun via sslavic)

  MAHOUT-1333: Fixed examples bin directory permissions in distribution archives (Mike Percy via sslavic)

  MAHOUT-1317: Clarify some of the messages in Preconditions.checkArgument (Nikolai Grinko, smarthi)

  MAHOUT-1314: StreamingKMeansReducer throws NullPointerException when REDUCE_STREAMING_KMEANS is set to true (smarthi)

  MAHOUT-1313: Fixed unwanted integral division bug in RowSimilarityJob downsampling code where precision should have been retained (sslavic)

  MAHOUT-1312: LocalitySensitiveHashSearch does not limit search results (sslavic)

  MAHOUT-1308: Cannot extend CandidateItemsStrategy due to restricted visibility (David Geiger, smarthi)
